--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -15,39 +15,46 @@ body {
 #app {
   height: 100%;
 }
-.popper-img{
+
+.popper-img {
   width: 132px;
   height: 132px;
   margin: 0;
   padding: 0;
 }
-.popover-sign-img{
+
+.popover-sign-img {
   width: 132px;
   height: 132px;
 }
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
   color: #999 !important;
 }
 
-input:-moz-placeholder, textarea:-moz-placeholder {
+input:-moz-placeholder,
+textarea:-moz-placeholder {
   color: #999 !important;
 }
 
-input::-moz-placeholder, textarea::-moz-placeholder {
+input::-moz-placeholder,
+textarea::-moz-placeholder {
   color: #999 !important;
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
   color: #999 !important;
 }
 
 textarea::-webkit-input-placeholder {
-  font-family:"微软雅黑" !important;
+  font-family: "微软雅黑" !important;
   font-size: 14px;
 }
 
 textarea {
-  font-family:"微软雅黑";
+  font-family: "微软雅黑";
 }
 
 // webkit滚动条美化
@@ -75,7 +82,7 @@ textarea {
 }
 
 ul,
-li{
+li {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -114,11 +121,11 @@ a {
   font-size: 14px;
 }
 
-.relative{
+.relative {
   position: relative;
 }
 
-.absolute{
+.absolute {
   position: absolute;
 }
 
@@ -144,7 +151,7 @@ a {
   justify-content: flex-start;
 }
 
-.left-part > * {
+.left-part>* {
   margin-bottom: 15px;
 }
 
@@ -177,10 +184,12 @@ a {
   .el-dialog__body {
     padding-bottom: 0;
   }
+
   .my-footer {
     text-align: center;
   }
 }
+
 .sign-dialog {
   .el-dialog__body {
     padding: 15px 40px 10px 40px;
@@ -191,14 +200,17 @@ a {
       color: #666666;
     }
   }
+
   .my-footer {
     text-align: center;
   }
 }
+
 .sign-input {
   .input-suffix {
     display: flex;
     margin-bottom: 10px;
+
     .input-title {
       display: inline-block;
       width: 80px;
@@ -208,26 +220,31 @@ a {
     }
   }
 }
+
 .sign-container {
   display: flex;
   justify-content: space-between;
   margin-top: 25px;
+
   .sign-one {
     width: 130px;
+
     .title {
       font-size: 12px;
       color: #333;
       text-align: left;
-      .title-small{
+
+      .title-small {
         font-size: 12px;
         color: #999999;
       }
     }
+
     .upload-area {
       box-sizing: border-box;
       width: 100%;
       height: 130px;
-      border: 1px dashed #ee7700;
+      border: 1px dashed #B69858;
       border-radius: 4px;
       overflow: hidden;
       margin: 20px 0 25px 0;
@@ -235,10 +252,12 @@ a {
       align-items: center;
       justify-content: center;
       position: relative;
+
       .file-upload {
         position: absolute;
         clip: rect(0 0 0 0);
       }
+
       .upload-content {
         width: 100%;
         height: 100%;
@@ -246,16 +265,19 @@ a {
         align-items: center;
         justify-content: center;
         cursor: pointer;
+
         i {
           font-size: 22px;
           color: #999;
           font-weight: bold;
         }
       }
+
       img {
         max-width: 100%;
         max-height: 100%;
       }
+
       .float-layer {
         position: absolute;
         top: 0;
@@ -268,14 +290,17 @@ a {
         display: flex;
         justify-content: space-around;
         align-items: flex-end;
-        i, label {
+
+        i,
+        label {
           color: #fff;
           font-size: 16px;
           cursor: pointer;
         }
       }
     }
-    .usersign-tip{
+
+    .usersign-tip {
       width: 250px;
       bottom: -14px;
       font-size: 12px;
@@ -283,14 +308,18 @@ a {
     }
   }
 }
+
 .preview-dialog-2 {
   background-color: rgba(0, 0, 0, 0.5);
+
   .el-dialog__header {
     padding: 0 !important;
+
     .el-dialog__headerbtn {
       top: -32px;
       right: -32px;
     }
+
     .el-dialog__close {
       font-size: 20px;
       font-weight: bold;
@@ -300,9 +329,11 @@ a {
       padding: 3px;
     }
   }
+
   .el-dialog__body {
     padding: 0 !important;
     text-align: center;
+
     .preview-img {
       max-width: 100%;
       display: block;
@@ -315,13 +346,16 @@ a {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
 .hidden-popover {
   display: none !important;
 }
+
 .tag-status {
   .el-tag {
     background-color: #FFFFFF;
     color: #7F7F7F;
+
     .el-tag__close.el-icon-close {
       background-color: #ACACAC;
       color: #fff;
@@ -329,24 +363,33 @@ a {
     }
   }
 }
+
 .el-select-dropdown.is-multiple .el-select-dropdown__item.hover {
   background: rgba(253, 119, 21, 0.1) !important;
 }
+
 .el-select-dropdown__wrap .el-select-dropdown__item.hover {
   background: rgba(253, 119, 21, 0.1) !important;
 }
+
 // element-ui 样式覆盖
+
 /** table filter*/
-.el-table__column-filter-trigger{
+
+.el-table__column-filter-trigger {
   line-height: 24px;
 }
+
 // element-ui 样式覆盖
+
 /** switch start*/
+
 .el-switch__core {
   background-color: #999999;
   border-radius: 10px;
 }
-.el-loading-spinner{
+
+.el-loading-spinner {
   width: 118px;
   height: 99px;
   background-color: #ffffff;
@@ -357,16 +400,19 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  .el-icon-loading{
+
+  .el-icon-loading {
     font-size: 34px;
     color: #333;
   }
-  .el-loading-text{
+
+  .el-loading-text {
     font-size: 12px;
     color: #333;
   }
 }
-.video-content .el-loading-spinner{
+
+.video-content .el-loading-spinner {
   width: 100%;
   background: none;
   border: none;
@@ -378,8 +424,8 @@ a {
 }
 
 .el-switch.is-checked .el-switch__core {
-  border-color: #ee7700;
-  background-color: #ee7700;
+  border-color: #B69858;
+  background-color: #B69858;
 }
 
 .el-switch__label--left {
@@ -400,6 +446,7 @@ a {
   z-index: 1111;
   color: #fff;
 }
+
 .el-message {
   top: 10px !important;
   padding-top: 10px;
@@ -429,21 +476,32 @@ a {
   z-index: 1111;
   color: #fff !important;
 }
+
+
 /** switch end*/
+
+
 /** table start*/
+
 .el-table__fixed-right-patch {
   background-color: #f7f7f7 !important;
 }
+
 th.gutter {
   background-color: #f7f7f7 !important;
 }
+
 .el-table .caret-wrapper {
   position: absolute !important;
   top: -5px !important;
 }
+
+
 /** table end*/
+
 .header-sort {
   position: relative;
+
   .header-icon {
     position: absolute;
     top: -1px;
@@ -452,24 +510,30 @@ th.gutter {
     background: #ffffff;
   }
 }
+
 .header-sort-select {
   .sort-icon {
     margin-right: 10px;
   }
 }
+
 .reset-input {
   .el-input__inner {
     font-size: 12px;
   }
+
   .el-input-group__prepend {
     width: 16px;
     background: #ffffff;
     overflow: hidden;
+
     &+.el-input__inner {
       padding-left: 10px;
     }
   }
-  .el-range-input, .el-range-separator {
+
+  .el-range-input,
+  .el-range-separator {
     font-size: 12px;
   }
 }
@@ -479,26 +543,31 @@ th.gutter {
   background-color: #ffffff;
   border-radius: 4px;
   border: solid 1px #dcdcdc;
+
   .el-message-box__title {
     font-size: 14px;
   }
+
   .el-textarea__inner {
     resize: none;
     height: 90px;
   }
-  .messageBoxButton, .messageBoxButton:hover {
+
+  .messageBoxButton,
+  .messageBoxButton:hover {
     background-color: #f56c6c;
     border-radius: 4px;
     border-color: #f56c6c;
   }
+
   .el-message-box__btns {
     text-align: center;
     padding-top: 0;
   }
 }
 
-.el-range-editor--small{
-  .el-range-input{
+.el-range-editor--small {
+  .el-range-input {
     text-align: left;
     padding-left: 5px;
   }
@@ -507,6 +576,7 @@ th.gutter {
 .slot-input {
   width: 225px !important;
   outline: none !important;
+
   .el-icon-circle-close {
     cursor: pointer;
   }
@@ -514,6 +584,7 @@ th.gutter {
 
 .area-select-input {
   outline: none !important;
+
   .el-icon-error {
     cursor: pointer;
   }
@@ -523,6 +594,7 @@ th.gutter {
   border-color: #FD7715 !important;
   background-color: #FD7715 !important;
   padding: 0 10px !important;
+
   .icon-search {
     font-size: 14px !important;
     color: #fff;
@@ -532,13 +604,16 @@ th.gutter {
 // 红色按钮样式
 .redConfirm {
   width: 340px;
+
   .el-message-box__btns {
     text-align: center;
+
     .leftBtn {
       background-color: #FD7715;
       border-color: #FD7715;
       color: #fff;
     }
+
     .rightBtn {
       background-color: #fff;
       border-color: #dcdfe6;
@@ -549,6 +624,7 @@ th.gutter {
 
 .centerConfirm {
   width: 340px;
+
   .el-message-box__btns {
     text-align: center;
   }
@@ -558,6 +634,7 @@ th.gutter {
   .el-input .el-input__inner {
     background-color: #f4f4f5;
   }
+
   .pagination-button {
     border: 1px solid #DCDFE6;
     margin-left: 15px;
@@ -565,31 +642,32 @@ th.gutter {
 }
 
 //图标相关样式
-.el-button [class*="icon-"] + span{
+.el-button [class*="icon-"]+span {
   margin-left: 5px;
 }
 
 //数字模式输入框隐藏箭头
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
-input[type="number"]{
-    -moz-appearance: textfield;
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 // table下面那条线
-.el-table::before{
-  height:0;
-}
-.el-table__fixed::before, .el-table__fixed-right::before{
-  height:0;
+.el-table::before {
+  height: 0;
 }
 
+.el-table__fixed::before,
+.el-table__fixed-right::before {
+  height: 0;
+}
 
-
-.el-form-item__tips{
-  color:#9c9797;
+.el-form-item__tips {
+  color: #9c9797;
   font-size: 0.12rem;
   line-height: 1;
   padding-top: 0.04rem;
@@ -598,65 +676,78 @@ input[type="number"]{
   left: 0;
 }
 
-#el-popover-4858{
-  padding:0;
-  padding-top:12px;
-  .styleButton{
-    padding:10px;
-    .el-button{
-      width:48%;
-      padding:0;
-      margin:0;
+#el-popover-4858 {
+  padding: 0;
+  padding-top: 12px;
+
+  .styleButton {
+    padding: 10px;
+
+    .el-button {
+      width: 48%;
+      padding: 0;
+      margin: 0;
       text-align: center;
-      color:#666;
-      &:hover,&:focus,&:active{
-        color:#ee7700;
+      color: #666;
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: #B69858;
       }
     }
   }
+}
 
-}
-.UserEditPassword{
-  .el-form-item__error{
-    left:77px !important;
+.UserEditPassword {
+  .el-form-item__error {
+    left: 77px !important;
   }
-  .el-form-item__tips{
+
+  .el-form-item__tips {
     font-size: 12px;
     line-height: 1;
     padding-top: 0.04rem;
     position: absolute;
     top: 100%;
-    font-size:12px;
-     left:77px !important;
+    font-size: 12px;
+    left: 77px !important;
   }
 }
-.childrenUserEditPassword{
-  .el-form-item__error{
-    left:68px !important;
+
+.childrenUserEditPassword {
+  .el-form-item__error {
+    left: 68px !important;
   }
-  .el-form-item__tips{
+
+  .el-form-item__tips {
     font-size: 12px;
     line-height: 1;
     padding-top: 0.04rem;
     position: absolute;
     top: 100%;
-    font-size:12px;
-    left:68px !important;
+    font-size: 12px;
+    left: 68px !important;
   }
 }
+
 .health-platform {
-  .el-table__empty-text{
+  .el-table__empty-text {
     display: none;
   }
-  .el-table__row{
+
+  .el-table__row {
     cursor: pointer;
   }
 }
+
 .check-bill-confirm {
   width: 189px;
+
   .el-message-box--center {
     padding-top: 0px;
   }
+
   .el-message-box__header {
     padding-top: 0px;
   }
@@ -667,8 +758,7 @@ input[type="number"]{
     font-size: 12px;
   }
 }
+
 .redButton {
   background-color: red !important;
 }
-
-
