--- a/src/assets/scss/element-variables.scss
+++ b/src/assets/scss/element-variables.scss
@@ -1,7 +1,8 @@
 /* 改变主题色变量 */
-$--color-primary: #FD7715;
+
+$--color-primary:#B69858;
 
 /* 改变 icon 字体路径变量，必需 */
-$--font-path: '~element-ui/lib/theme-chalk/fonts';
 
+$--font-path: '~element-ui/lib/theme-chalk/fonts';
 @import "~element-ui/packages/theme-chalk/src/index";
