--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -156,9 +156,17 @@ a {
 }
 
 .right-part {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
+  float: right;
+  // display: flex;
+  // justify-content: flex-end;
+  // align-items: flex-start;
+}
+
+.el-card__header {
+  padding: 0.1rem 0.2rem;
+  line-height: 55px;
+  line-height: 0.35rem;
+  font-weight: bold;
 }
 
 .ellipsis {
